--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "crud-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node --experimental-specifier-resolution=node ./src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:prod": "tsc && node ./dist/index.js"
   },
   "author": "Andrei Asipik",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "@types/node": "^20.11.17",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "uuid": "^9.0.1"
