--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --exec ts-node --experimental-specifier-resolution=node ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:prod": "tsc && node ./dist/index.js"
+    "start:dev": "nodemon --exec ts-node --experimental-specifier-resolution=node ./src/index.ts",
+    "start:prod": "tsc && node ./dist/index.js",
+    "test": "jest test/app.test.ts"
   },
   "author": "Andrei Asipik",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
